Actualización de requisitos a Java 21, refactorización en la gestión de versiones S3 con paginación, soporte para Mockito en pruebas y ajustes en `mensajes.properties`.